# ncmpi_vol

./: CMakeLists.txt  DEVNOTE.md  Makefile  README.md  ncmpi_vol.c  ncmpi_vol.h  ncmpi_vol_dataset.c  ncmpi_vol_file.c  ncmpi_vol_util.c  test.c
examples/: CMakeLists.txt  attr.cpp  create_open.cpp  var_rw.cpp
include/: ncmpi_vol.h
src/: ncmpi_vol.cpp  ncmpi_vol_att.cpp  ncmpi_vol_dataset.cpp  ncmpi_vol_dataset_util.cpp  ncmpi_vol_file.cpp  ncmpi_vol_group.cpp  ncmpi_vol_introspect.cpp  ncmpi_vol_object.cpp  ncmpi_vol_util.c  ncmpi_vol_util.cpp
test/: CMakeLists.txt  allvol.cpp  mismatchtype.cpp  multiblockselection.cpp  multipointselection.cpp  test.c
